# picomesh

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build-3rdparty-libco.yml  build-3rdparty-libcurl.yml  build-3rdparty-libgit2.yml  build-3rdparty-libmdbx.yml  build-3rdparty-libsqlite3.yml  build-3rdparty-libuv.yml  build-3rdparty-libyaml.yml  build-3rdparty-linux.yml  build-3rdparty-opensbi.yml  build-3rdparty-openssl.yml  build-3rdparty-simdjson.yml  build-3rdparty-zlib-ng.yml  deploy-picomesh-yemu-demo.yml  deploy-yaafc-yemu-demo.yml
.woodpecker/: windows.yml
assets/picoforge/config/: picoforge-webasm.yaml  picoforge.yaml
assets/picoforge/static/: style.css
build-tools/cmake/: bin2c.cmake
build-tools/picomesh/: 3rdparty-fetch.cmake
build-tools/picomesh/cross/: linux-riscv64.cmake
build-tools/picomesh/libs/: co.cmake  libcurl.cmake  libgit2.cmake  libmdbx.cmake  openssl.cmake  simdjson.cmake  sqlite3.cmake  uv.cmake  yaml.cmake  zlib-ng.cmake
build-tools/picomesh/win-compat/: msvc-prelude.h  pthread.h  strings.h  unistd.h
build-tools/windows/: build.bat
build-tools/yaafc/: 3rdparty-fetch.cmake
build-tools/yaafc/libs/: co.cmake  libgit2.cmake  libmdbx.cmake  simdjson.cmake  sqlite3.cmake  uv.cmake  yaml.cmake
docs/: architecture.md  msgpack-rpc.md  msgpack.md  perf-counters.md  perf.md  picoforge-pipeline.md  relational-storage.md  runner-agent.md  security.md  service-console.md  sharded-relational-storage.md  tracing.md
include/picomesh/allocator/: allocator.h
include/picomesh/authenticators/: base.h  registry.h
include/picomesh/authorizers/: base.h  registry.h
include/picomesh/json/: json.h
include/picomesh/msgpack/: msgpack.h
include/picomesh/platform/: random.h
include/picomesh/yargv/: yargv.h
include/picomesh/yclass/: class.h  jinvoke.h  minvoke.h  rpc.h  yheaders.h
include/picomesh/yco/: coro.h
include/picomesh/yconfig/: yconfig.h
include/picomesh/ycore/: result.h  yperf.h  yspan.h  ytelemetry.h  ytelemetry_store.h  ytrace.h
include/picomesh/yengine/: engine.h  resolve.h
include/picomesh/yjson/: yjson.h
include/picomesh/yloop/: yexec.h  yloop.h
include/picomesh/yplatform/: time.h
include/picomesh/ysecurity/: base64.h  jwt.h  jwt_verifier.h  secret.h  sha256.h
include/uthash/: uthash.h
include/yaafc/yargv/: yargv.h
include/yaafc/yclass/: class.h  jinvoke.h  rpc.h  yheaders.h
include/yaafc/yco/: coro.h
include/yaafc/yconfig/: yconfig.h
include/yaafc/ycore/: result.h  yspan.h  ytrace.h
include/yaafc/yengine/: engine.h
include/yaafc/yjson/: yjson.h
include/yaafc/yloop/: yloop.h
include/yaafc/yplatform/: time.h
qa-tools/: run-in-nix.sh
qa-tools/analysis/: check-clang-tidy.py  check-format.py  check-scan-build.py
qa-tools/analysis/naming-convention/: CMakeLists.txt  naming-convention.cpp  run-naming-convention.sh
qa-tools/analysis/result-checker/: CMakeLists.txt  result-checker.cpp  run-result-checker.sh
qa-tools/lib/naming-convention/: CMakeLists.txt  core.cpp  core.h
qa-tools/refactoring/: replace
qa-tools/refactoring/code-format/: apply-clang-tidy.py  apply-format.py
qa-tools/refactoring/naming-convention/: CMakeLists.txt  apply-naming-convention.sh  naming-convention-fix.cpp
scenarios/git-yaafc/: mesh-up.sh  smoke.sh  yaafc.yaml
scenarios/git-yaafc/deploy/: run.sh.tmpl  stage.sh
scenarios/git-yaafc/yemu/: README.md  build-image.sh  run-vm.sh
scenarios/picoforge/: mesh-up.sh  picoforge.yaml  smoke.sh
scenarios/picoforge/deploy/: run.sh.tmpl  stage.sh
scenarios/picoforge/yemu/: README.md  build-image.sh  run-vm.sh  test-qemu.sh
src/cmp/: cmp.c  cmp.h
src/picoforge/webapp/: http_client.c  http_client.h  main.c  webapp.c  webapp.h
src/picohttpparser/: picohttpparser.c
src/picomesh/allocator/: allocator.c
src/picomesh/argv/: argv.c
src/picomesh/authenticators/: http_util.h  jwt_util.h  registry.c  types.h
src/picomesh/authorizers/: registry.c  types.h
src/picomesh/config/: config.c
src/picomesh/core/: result.c  yperf.c  yspan.c  ytelemetry.c  ytelemetry_store.c  ytrace.c
src/picomesh/engine/: engine.c  resolve.c
src/picomesh/json/: json.c  json.cpp
src/picomesh/loop/: exec.c  loop.c
src/picomesh/main/: autoport.c  autoport.h  main.c
src/picomesh/msgpack/: msgpack.c
src/picomesh/picoclass/: class.c  jinvoke.c  minvoke.c  rpc.c  yheaders.c
src/picomesh/picoco/: coro.c
src/picomesh/platform/: longjmp_chk_stub.c
src/picomesh/plugins/git_repo/: CMakeLists.txt  git_repo.internal.h  methods.gen.c  model.yaml  rpc.gen.c  store.c  store.gen.c
src/picomesh/plugins/github_authn/: CMakeLists.txt  github_authn.internal.h  methods.gen.c  model.yaml  rpc.gen.c  store.c  store.gen.c
src/picomesh/runner_agent/: main.c
src/picomesh/security/: base64.c  jwt.c  jwt_verifier.c  secret.c  sha256.c
src/picomesh/yargv/: yargv.c
src/picomesh/yclass/: class.c  jinvoke.c  minvoke.c  rpc.c  (+1 more)
src/picomesh/ymain/: CMakeLists.txt  autoport.c  autoport.h  ymain.c
src/tinyemu/: aes.c  aes.h  block_net.c  build_filelist.c  cutils.c  cutils.h  elf.c  elf.h  fbuf.h  fs.c  fs.h  fs_disk.c  fs_disk_win32.c  fs_net.c  fs_utils.c  fs_utils.h  fs_wget.c  fs_wget.h  ide.c  ide.h  iomem.c  iomem.h  json.c  json.h  list.h  machine.c  machine.h  pci.c  pci.h  pckbd.c  ps2.c  ps2.h  riscv_cpu.c  riscv_cpu.h  riscv_cpu_fp_template.h  riscv_cpu_priv.h  riscv_cpu_template.h  riscv_machine.c  sdl.c  sha256.c  (+20 more)
src/yaafc/ymain/: CMakeLists.txt  ymain.c
tests/: CMakeLists.txt
tests/performance/git-yaafc/: CMakeLists.txt  README.md  yaafc-perf.c
tests/performance/picoforge/: CMakeLists.txt  README.md  perf-report.py  perf-run.sh  picoforge-perf.c
tools/: test-wasm-with-headless-chrome.mjs  test-wasm-with-headless-chrome.sh
tools/msgpack-client/: echo_server.py  picomesh_msgpack.py
tools/msgpack-codegen/: emit_cpp.py  emit_go.py  emit_lua.py  emit_python.py  emit_rust.py  gen.py  model.py
tools/picoforge/: mesh-down.sh  mesh-up.sh  msgpack-outbound-smoke.sh  msgpack-smoke.sh  smoke.sh
tools/service-console/: console_proto.py
(+493 files in other folders)
